[workspace]
members = [
    "crates/lib",
    "crates/minimal-clients/*",
    "crates/mvp",
    "crates/test-client",
    "crates/server",
    "crates/shared",
    "crates/shared-lib-sync",
]
resolver = "2"

[workspace.package]
rust-version = "1.75"
edition = "2021"
license = "MIT"
authors = ["Jakobzs"]

[workspace.dependencies]
anyhow = "1"
bincode = { version = "1" }
bitfield-struct = "0.6"
crossbeam = "0.8"
num_cpus = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
sysinfo = "0.30"
thiserror = "1"
thread-id = "4"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
rangemap = "1"
csv = "1"
serde_json = "1"

[workspace.dependencies.windows]
version = "0.53"
features = [
    "Win32_Foundation",
    "Win32_Media_DeviceManager",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Services",
    "Win32_System_Threading",
]
