[package]
name = "thor-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
bitfield-struct = "0.6"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Media_DeviceManager",
    "Win32_System_Services",
]

[build-dependencies]
sysinfo = "0.30"
