[package]
name = "thor-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
bincode = { workspace = true }
bitfield-struct = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
windows = { workspace = true }

[build-dependencies]
sysinfo = "0.30"
