[package]
name = "thor-minimal-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
thor-shared = { path = "../shared" }
thread-id = { workspace = true }
crossbeam = { workspace = true }
