[package]
name = "thor-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
crossbeam = { workspace = true }
num_cpus = { workspace = true }
rangemap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.114"
sysinfo = { workspace = true }
thor-lib = { path = "../lib" }
thor-shared = { path = "../shared" }
tokio = { workspace = true }
toml = { workspace = true }
