[package]
name = "thor-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thor-lib = { path = "../lib" }
thor-shared = { path = "../shared" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bincode = { version = "1" }
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
toml = "0.8"
