[package]
name = "test-client"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thor-shared = { path = "../shared" }
tokio = { workspace = true }
bincode = { workspace = true }
csv = { workspace = true }
thor-lib = { path = "../lib" }
toml = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.114"
