[package]
name = "thor-minimal-client-async-lock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
thor-shared = { path = "../shared" }
thread-id = { workspace = true }
crossbeam = { workspace = true }
thor-lib = { path = "../lib" }
csv = "1"
